# coreutils

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cat/: CMakeLists.txt  main.cpp  process.cpp  process.hpp  read.cpp  read.hpp  test.txt
ccvt/: CMakeLists.txt  main.cpp
include/coreutils/: param.hpp
include/coreutils/code/: convert.hpp
libcode/: CMakeLists.txt  convert.cpp  test_main.cpp
yes/: CMakeLists.txt  main.cpp
